--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,6 @@ plugins {
 }
 
 android {
-    dataBinding{
-        enabled = true
-    }
     compileSdk 30
 
     defaultConfig {
@@ -28,10 +25,18 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    viewBinding {
+        enabled = true
+    }
+    buildFeatures {
+        viewBinding true
+    }
 }
-
+apply plugin: 'com.google.gms.google-services'
 dependencies {
-
+    implementation platform('com.google.firebase:firebase-bom:28.4.2')
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-auth'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
